--- a/src/careers.html
+++ b/src/careers.html
@@ -5,11 +5,11 @@
     
     <main class="content">
       //= parts/page-header-careers.html
+      //= parts/block-cta-3.html
       //= parts/block-slider-variable-width.html
       //= parts/block-careers-list.html
       //= parts/block-slider-content.html
-      //= parts/block-headline-text.html
-      //= parts/block-slider-images.html
+      //= parts/block-careers-share.html
     </main>
 
     //= parts/footer.html
