--- a/src/parts/block-blog-article-2.html
+++ b/src/parts/block-blog-article-2.html
@@ -12,7 +12,7 @@
           <div class="fade-up-wrapper">
             <p><strong>Exploring the Impact of Generative AI in Sports</strong></p>
             <p>September 25, 2023</p>
-            <a href="#" class="btn btn-outline-secondary">
+            <a id="copyUrl" href="#" class="btn btn-outline-secondary">
               SHARE THIS PODCAST
               <svg xmlns="http://www.w3.org/2000/svg" width="6" height="6" viewBox="0 0 6 6" fill="none">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M4.23503 1.03389L0 5.26893L0.731074 6L4.96611 1.76497V4.90339H6V4.76837e-07H1.09661L1.09661 1.03389H4.23503Z" fill="#0B0B0B" />
