--- a/src/parts/page-header-contact.html
+++ b/src/parts/page-header-contact.html
@@ -1,17 +1,11 @@
-<section class="page-header-two-col">
+<section class="page-header-text">
   <div class="container-fluid">
-    <div class="row align-items-end">
-      <div class="col-lg-8">
-        <h1>
-          SO Let's<br />
-          Talk
-        </h1>
-      </div>
-      <div class="col-lg-4">
-        <div class="fade-up">
-          <p>Quick responses, dedicated support, open positions. Your connection to WSC Sports starts here.</p>
-        </div>
-      </div>
+    <h1>
+      SO Let's<br />
+      Talk
+    </h1>
+    <div class="fade-up">
+      <p>We are proud to have over 430 leading sports media organizations from over 42 countries around the world as our clients.</p>
     </div>
   </div>
 </section>
