--- a/src/contact.html
+++ b/src/contact.html
@@ -5,7 +5,7 @@
     
     <main class="content">
       //= parts/page-header-contact.html
-      //= parts/block-join.html
+      //= parts/block-cta-3.html
       //= parts/block-contact-form.html
       //= parts/block-scroll-list.html
     </main>
