--- a/src/parts/page-header-careers-single.html
+++ b/src/parts/page-header-careers-single.html
@@ -1,42 +1,21 @@
-<section class="page-header-career">
-  <div class="page-header-top">
-    <div class="container-fluid">
-      <div class="row align-items-end">
-        <div class="col-lg-4 col-xxl-6">
-          <h2>Customer Success Manager</h2>
-          <div class="tags d-lg-none fade-up">
-            <span>Australia </span>
-            <span>Account Management</span>
-            <span>Full Time</span>
-            <span>intermediate</span>
-            <span>hybrid</span>
-          </div>
-        </div>
-        <div class="col-lg-8 col-xxl-6 d-none d-lg-block">
-          <div class="lead fade-up-wrapper">
-            <p>WSC Sports delivers an AI-powered automation video solution for <br />real-time sports content creation and distribution and is the fastest-growing sports-tech company in the world.</p>
-          </div>
+<section class="page-header-career bg-primary">
+  <div class="container-fluid">
+    <div class="row align-items-center justify-content-between">
+      <div class="col-md-6 col-xl-5">
+        <h2>Customer Success Manager</h2>
+      </div>
+      <div class="col-md-6 col-xl-5 col-xxl-6">
+        <div class="fade-up">
+          <p>WSC Sports delivers an AI-powered automation video solution for real-time sports content creation and distribution and is the fastest-growing sports-tech company in the world.</p>
         </div>
       </div>
     </div>
-  </div>
-  <div class="page-header-bottom">
-    <div class="container-fluid">
-      <div class="d-lg-none">
-        <div class="lead fade-up-wrapper">
-          <p>WSC Sports delivers an AI-powered automation video solution for <br />real-time sports content creation and distribution and is the fastest-growing sports-tech company in the world.</p>
-        </div>
-      </div>
-
-      <div class="d-none d-lg-block">
-        <div class="tags fade-up">
-          <span>Australia </span>
-          <span>Account Management</span>
-          <span>Full Time</span>
-          <span>intermediate</span>
-          <span>hybrid</span>
-        </div>
-      </div>
+    <div class="tags fade-up">
+      <span>Australia </span>
+      <span>Account Management</span>
+      <span>Full Time</span>
+      <span>intermediate</span>
+      <span>hybrid</span>
     </div>
   </div>
 </section>
