--- a/src/parts/block-testimonials.html
+++ b/src/parts/block-testimonials.html
@@ -13,7 +13,7 @@
           <div class="video-wrapper">
             <button class="btn-video-play"></button>
             <div class="video img-fade">
-              <video src="" poster="images/img32.jpg"></video>
+              <video src="media/video.mp4" poster="images/img32.jpg"></video>
             </div>
           </div>
         </div>
