--- a/src/parts/block-logos.html
+++ b/src/parts/block-logos.html
@@ -1,12 +1,6 @@
 <section class="block-logos">
   <div class="container-fluid">
-    <div class="text-center">
-      <h3>WE’rE Revolutionizing the Game</h3>
-      <div class="fade-up fs-21">
-        <p>Join the World's Leading Sports Brands and Embrace WSC Sports AI for the Ultimate Fan Experience</p>
-      </div>
-    </div>
-    <div class="logos-list d-md-none fade-up">
+    <div class="logos-list d-xl-none fade-up">
       <ul>
         <li><img src="images/logo01-m.svg" alt="" /></li>
         <li><img src="images/logo02-m.svg" alt="" /></li>
@@ -18,15 +12,8 @@
         <li><img src="images/logo08-m.svg" alt="" /></li>
       </ul>
     </div>
-    <div class="logos-list d-none d-md-block fade-up">
+    <div class="logos-list d-none d-xl-block fade-up">
       <ul>
-        <li><img src="images/logo01.svg" alt="" /></li>
-        <li><img src="images/logo02.svg" alt="" /></li>
-        <li><img src="images/logo03.svg" alt="" /></li>
-        <li><img src="images/logo04.svg" alt="" /></li>
-        <li><img src="images/logo05.svg" alt="" /></li>
-        <li><img src="images/logo06.svg" alt="" /></li>
-        <li><img src="images/logo07.svg" alt="" /></li>
         <li><img src="images/logo08.svg" alt="" /></li>
         <li><img src="images/logo09.svg" alt="" /></li>
         <li><img src="images/logo10.svg" alt="" /></li>
