--- a/src/parts/block-logos.html
+++ b/src/parts/block-logos.html
@@ -1,27 +1,63 @@
-<section class="block-logos d-none d-xxl-block">
+<section class="block-logos">
   <div class="container-fluid">
-    <div class="logos-list d-xl-none fade-up">
+    <div class="logos-list">
       <ul>
-        <li><img src="images/logo01-m.svg" alt="" /></li>
-        <li><img src="images/logo02-m.svg" alt="" /></li>
-        <li><img src="images/logo03-m.svg" alt="" /></li>
-        <li><img src="images/logo04-m.svg" alt="" /></li>
-        <li><img src="images/logo05-m.svg" alt="" /></li>
-        <li><img src="images/logo06-m.svg" alt="" /></li>
-        <li><img src="images/logo07-m.svg" alt="" /></li>
-        <li><img src="images/logo08-m.svg" alt="" /></li>
-      </ul>
-    </div>
-    <div class="logos-list d-none d-xl-block fade-up">
-      <ul>
-        <li><img src="images/logo08.svg" alt="" /></li>
-        <li><img src="images/logo09.svg" alt="" /></li>
-        <li><img src="images/logo10.svg" alt="" /></li>
-        <li><img src="images/logo11.svg" alt="" /></li>
-        <li><img src="images/logo12.svg" alt="" /></li>
-        <li><img src="images/logo13.svg" alt="" /></li>
-        <li><img src="images/logo14.svg" alt="" /></li>
-        <li><img src="images/logo15.svg" alt="" /></li>
+        <li>
+          <div class="logo-inner">
+            <span class="logo-item"><img src="images/logo08.svg" alt="" /></span>
+            <span class="logo-item"><img src="images/logo01.svg" alt="" /></span>
+            <span class="logo-item"><img src="images/logo02.svg" alt="" /></span>
+          </div>
+        </li>
+        <li>
+          <div class="logo-inner">
+            <span class="logo-item"><img src="images/logo09.svg" alt="" /></span>
+            <span class="logo-item"><img src="images/logo03.svg" alt="" /></span>
+            <span class="logo-item"><img src="images/logo04.svg" alt="" /></span>
+          </div>
+        </li>
+        <li>
+          <div class="logo-inner">
+            <span class="logo-item"><img src="images/logo10.svg" alt="" /></span>
+            <span class="logo-item"><img src="images/logo05.svg" alt="" /></span>
+            <span class="logo-item"><img src="images/logo06.svg" alt="" /></span>
+          </div>
+        </li>
+        <li>
+          <div class="logo-inner">
+            <span><img src="images/logo11.svg" alt="" /></span>
+            <span><img src="images/logo07.svg" alt="" /></span>
+            <span><img src="images/logo08.svg" alt="" /></span>
+          </div>
+        </li>
+        <li>
+          <div class="logo-inner">
+            <span><img src="images/logo12.svg" alt="" /></span>
+            <span><img src="images/logo09.svg" alt="" /></span>
+            <span><img src="images/logo10.svg" alt="" /></span>
+          </div>
+        </li>
+        <li>
+          <div class="logo-inner">
+            <span><img src="images/logo13.svg" alt="" /></span>
+            <span><img src="images/logo11.svg" alt="" /></span>
+            <span><img src="images/logo12.svg" alt="" /></span>
+          </div>
+        </li>
+        <li>
+          <div class="logo-inner">
+            <span><img src="images/logo14.svg" alt="" /></span>
+            <span><img src="images/logo13.svg" alt="" /></span>
+            <span><img src="images/logo01.svg" alt="" /></span>
+          </div>
+        </li>
+        <li>
+          <div class="logo-inner">
+            <span><img src="images/logo15.svg" alt="" /></span>
+            <span><img src="images/logo06.svg" alt="" /></span>
+            <span><img src="images/logo07.svg" alt="" /></span>
+          </div>
+        </li>
       </ul>
     </div>
   </div>
