--- a/src/parts/block-home-parallax.html
+++ b/src/parts/block-home-parallax.html
@@ -8,7 +8,7 @@
     <div id="parallax6" class="parallax-item parallax-item-6"><img src="images/img36.jpg" alt="" /></div>
     <div id="parallax7" class="parallax-item parallax-item-7"><img src="images/img08.jpg" alt="" /></div>
   </div>
-  <div class="parallax-wrapper">
+  <!-- <div class="parallax-wrapper">
     <div id="parallax1" class="parallax-item parallax-item-1"><img src="images/img11.jpg" alt="" /></div>
     <div id="parallax2" class="parallax-item parallax-item-2"><img src="images/img13.jpg" alt="" /></div>
     <div id="parallax3" class="parallax-item parallax-item-3"><img src="images/img41.jpg" alt="" /></div>
@@ -16,5 +16,5 @@
     <div id="parallax5" class="parallax-item parallax-item-5"><img src="images/img29.jpg" alt="" /></div>
     <div id="parallax6" class="parallax-item parallax-item-6"><img src="images/img36.jpg" alt="" /></div>
     <div id="parallax7" class="parallax-item parallax-item-7"><img src="images/img08.jpg" alt="" /></div>
-  </div>
+  </div> -->
 </div>
