--- a/src/parts/block-outcome.html
+++ b/src/parts/block-outcome.html
@@ -10,12 +10,12 @@
                 <div class="fade-up">
                   <p>With personalized highlight feeds on the Cavs app, fans now have easy access to the specific content they want to see most.</p>
                 </div>
-                <div class="icon fade-up"><img src="images/icon04.svg" alt="" /></div>
+                <div class="icon"><img src="images/icon04.svg" alt="" /></div>
               </div>
             </div>
 
             <div class="col-md-6">
-              <div class="image fade-in">
+              <div class="image">
                 <picture>
                   <source srcset="images/img38.jpg" media="(min-width: 768px)" />
                   <img src="images/img38-m.png" alt="" />
@@ -34,11 +34,11 @@
                 <div class="fade-up">
                   <p>Not only does this provide an exciting new viewing experience for the fans, but the Cavs also benefit by learning more about their audience, gaining valuable app user data.</p>
                 </div>
-                <div class="icon fade-up"><img src="images/icon04.svg" alt="" /></div>
+                <div class="icon"><img src="images/icon04.svg" alt="" /></div>
               </div>
             </div>
             <div class="col-md-6">
-              <div class="image fade-in">
+              <div class="image">
                 <picture>
                   <source srcset="images/img39.jpg" media="(min-width: 768px)" />
                   <img src="images/img39-m.png" alt="" />
@@ -57,12 +57,12 @@
                 <div class="fade-up">
                   <p>Helping to provide more tailored content and other offerings to fans in the future.</p>
                 </div>
-                <div class="icon fade-up"><img src="images/icon04.svg" alt="" /></div>
+                <div class="icon"><img src="images/icon04.svg" alt="" /></div>
               </div>
             </div>
 
             <div class="col-md-6">
-              <div class="image fade-in">
+              <div class="image">
                 <picture>
                   <source srcset="images/img40.jpg" media="(min-width: 768px)" />
                   <img src="images/img40-m.png" alt="" />
