--- a/src/parts/block-testimonials-1.html
+++ b/src/parts/block-testimonials-1.html
@@ -10,7 +10,7 @@
 
   <div class="testimonials-slider bg-primary">
     <div class="container-fluid">
-      <div class="swiper fade-up">
+      <div class="swiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <div class="item">
