--- a/src/parts/block-testimonials-slider.html
+++ b/src/parts/block-testimonials-slider.html
@@ -9,7 +9,7 @@
   </div>
   <div class="block-inner bg-primary">
     <div class="container-fluid">
-      <div class="swiper fade-up">
+      <div class="swiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <div class="item">
