--- a/src/parts/block-testimonials.html
+++ b/src/parts/block-testimonials.html
@@ -11,9 +11,13 @@
       <div class="row">
         <div class="col-md-6">
           <div class="video-wrapper">
-            <button class="btn-video-play playing"></button>
             <div class="video img-fade">
-              <video src="media/video.mp4" controls muted autoplay playsinline loop></video>
+              <video src="media/video.mp4" muted autoplay playsinline></video>
+            </div>
+            <div class="video-controls">
+              <button class="video-replay"></button>
+              <button class="video-play"></button>
+              <button class="video-sound"></button>
             </div>
           </div>
         </div>
@@ -33,7 +37,7 @@
 
   <div class="testimonials-slider bg-primary">
     <div class="container-fluid">
-      <div class="swiper fade-up">
+      <div class="swiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <div class="item">
