--- a/src/parts/page-header-case-2.html
+++ b/src/parts/page-header-case-2.html
@@ -1,8 +1,8 @@
-<section class="page-header-case">
+<section class="page-header-case video-wrapper">
   <div class="block-inner bg-secondary">
     <div class="media">
       <div class="img-fade">
-        <img src="images/temp1.jpg" alt="" />
+        <video src="media/video.mp4" muted autoplay playsinline></video>
       </div>
     </div>
     <div class="text">
@@ -12,7 +12,11 @@
           UNIVERSITY OF<br />
           PITTSBURGH
         </h1>
-        <a href="#" class="btn-watch">WATCH NOW</a>
+        <div class="video-controls">
+          <button class="video-replay"></button>
+          <button class="video-play"></button>
+          <button class="video-sound"></button>
+        </div>
       </div>
     </div>
   </div>
