--- a/src/parts/page-header-case-4.html
+++ b/src/parts/page-header-case-4.html
@@ -1,13 +1,11 @@
 <section class="page-header-case">
   <div class="block-inner bg-secondary">
     <div class="media">
-      <div class="img-fade">
-        <img src="images/temp1.jpg" alt="" />
-      </div>
+      <img src="images/temp1.jpg" alt="" />
     </div>
     <div class="text">
       <div class="container-fluid">
-        <h1>
+        <h1 class="not-animated">
           <em>ATP</em>
           BARCELONA
           <br />TOUR
