--- a/src/parts/block-case-results-1.html
+++ b/src/parts/block-case-results-1.html
@@ -3,7 +3,7 @@
     <div class="row justify-content-between">
       <div class="col-md-6">
         <div class="image">
-          <div class="img-fade"><img src="images/img36.jpg" alt="" /></div>
+          <img src="images/img36.jpg" alt="" />
         </div>
       </div>
       <div class="col-md-6">
