--- a/src/parts/block-cases-slider.html
+++ b/src/parts/block-cases-slider.html
@@ -1,5 +1,5 @@
 <section class="block-cases-slider bg-secondary">
-  <div class="swiper">
+  <div class="swiper swiper-outer">
     <div class="swiper-wrapper">
       <div class="swiper-slide" style="background-image: url(images/slide1-bg.jpg)">
         <div class="item">
@@ -7,7 +7,6 @@
             <em>ATP</em>BARCELONA<br />
             TOUR
           </h2>
-          <figure><img src="images/slide1.png" alt="" /></figure>
         </div>
       </div>
       <div class="swiper-slide" style="background-image: url(images/slide2-bg.jpg)">
@@ -17,7 +16,6 @@
             <br />
             CAVALIERS
           </h2>
-          <figure><img src="images/slide2.png" alt="" /></figure>
         </div>
       </div>
       <div class="swiper-slide" style="background-image: url(images/slide3-bg.jpg)">
@@ -27,35 +25,51 @@
             <br />
             PITTSBURGH
           </h2>
-          <figure><img src="images/slide3.png" alt="" /></figure>
         </div>
       </div>
       <div class="swiper-slide" style="background-image: url(images/slide1-bg.jpg)">
         <div class="item">
           <h2><em>ATP</em>ESPN</h2>
-          <figure><img src="images/slide1.png" alt="" /></figure>
         </div>
       </div>
       <div class="swiper-slide" style="background-image: url(images/slide2-bg.jpg)">
         <div class="item">
           <h2><em>NBA</em>LA LIGA</h2>
-          <figure><img src="images/slide2.png" alt="" /></figure>
         </div>
       </div>
     </div>
     <div class="swiper-pagination"></div>
     <div class="swiper-controls">
       <ul>
-        <li class="active" data-slide="0">BARCELONA TOUR</li>
-        <li data-slide="1">CLEVELAND CAVALIERS</li>
-        <li data-slide="2">LA RAMS</li>
-        <li data-slide="3">ESPN</li>
-        <li data-slide="4">LA LIGA</li>
+        <li><a href="#">BARCELONA TOUR</a></li>
+        <li><a href="#">CLEVELAND CAVALIERS</a></li>
+        <li><a href="#">LA RAMS</a></li>
+        <li><a href="#">ESPN</a></li>
+        <li><a href="#">LA LIGA</a></li>
       </ul>
       <div class="active-arrow">
         <svg xmlns="http://www.w3.org/2000/svg" width="15" height="14" viewBox="0 0 15 14" fill="none">
           <path d="M15 14V5.6875L0 0L7.71429 14H15Z" fill="#E5FF00" />
         </svg>
+      </div>
+    </div>
+  </div>
+  <div class="swiper swiper-inner">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide">
+        <figure><img src="images/slide1.png" alt="" /></figure>
+      </div>
+      <div class="swiper-slide">
+        <figure><img src="images/slide2.png" alt="" /></figure>
+      </div>
+      <div class="swiper-slide">
+        <figure><img src="images/slide1.png" alt="" /></figure>
+      </div>
+      <div class="swiper-slide">
+        <figure><img src="images/slide3.png" alt="" /></figure>
+      </div>
+      <div class="swiper-slide">
+        <figure><img src="images/slide2.png" alt="" /></figure>
       </div>
     </div>
   </div>
