--- a/src/parts/block-testimonials-2.html
+++ b/src/parts/block-testimonials-2.html
@@ -1,7 +1,7 @@
 <section class="block-testimonials block-testimonials--padding-top">
   <div class="testimonials-slider bg-gray">
     <div class="container-fluid">
-      <div class="swiper fade-up">
+      <div class="swiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <div class="item">
