--- a/src/parts/block-testimonials-slider-1.html
+++ b/src/parts/block-testimonials-slider-1.html
@@ -1,7 +1,7 @@
 <section class="block-testimonials-slider">
   <div class="block-inner bg-gray">
     <div class="container-fluid">
-      <div class="swiper fade-up">
+      <div class="swiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <div class="item">
