--- a/src/parts/block-case-intro-1.html
+++ b/src/parts/block-case-intro-1.html
@@ -1,21 +1,19 @@
 <section class="block-case-intro">
   <div class="container-fluid">
     <div class="d-md-none">
-      <div class="image fade-up"><img src="images/img33.png" alt="" /></div>
+      <div class="image"><img src="images/img33.png" alt="" /></div>
     </div>
-    <div class="block-header">
+    <div class="block-header lines-wrapper">
       <h3>The <br />SOlution</h3>
-      <div class="fade-up">
-        <p>Since 2015 the Cleveland Cavaliers have been using WSC&nbsp;Sports’&nbsp;AI platform to automatically create and distribute real-time game highlights to their platform.</p>
-      </div>
+      <p>Since 2015 the Cleveland Cavaliers have been using WSC Sports’ AI platform to automatically create and distribute real-time game highlights to their platform.</p>
     </div>
 
     <div class="row justify-content-between">
       <div class="col-md-6 col-lg-5 d-none d-md-block">
-        <div class="image fade-up"><img src="images/img33.png" alt="" /></div>
+        <div class="image"><img src="images/img33.png" alt="" /></div>
       </div>
       <div class="col-md-6">
-        <div class="text fade-up-wrapper">
+        <div class="text lines-wrapper">
           <p>The Cavaliers’ were also the first NBA team to integrate with WSC Sports, offering a customizable highlights experience for fans on their mobile app – this is their success story.</p>
           <p>The Cleveland Cavaliers understand that not all Cavs fans are the same. They like different players and different plays – some are all about the three pointers, others just can’t get enough of dunks. They are different ages, different genders, speak different languages, and live in different countries. So naturally the content they want to watch differs greatly.</p>
         </div>
