--- a/src/parts/block-cta-2.html
+++ b/src/parts/block-cta-2.html
@@ -18,7 +18,7 @@
         </div>
       </div>
     </div>
-    <div class="fade-up">
+    <div class="lines-wrapper">
       <p>With personalized highlight feeds on the Cavaliers app, fans now have easy access to the specific content and can:</p>
     </div>
     <div class="fade-up d-md-none">
