--- a/src/parts/block-outcome.html
+++ b/src/parts/block-outcome.html
@@ -5,11 +5,9 @@
         <div class="item">
           <div class="row">
             <div class="col-md-6">
-              <div class="text">
+              <div class="text lines-wrapper">
                 <h4>Personalised Content How You Want It</h4>
-                <div class="fade-up">
-                  <p>With personalized highlight feeds on the Cavs app, fans now have easy access to the specific content they want to see most.</p>
-                </div>
+                <p>With personalized highlight feeds on the Cavs app, fans now have easy access to the specific content they want to see most.</p>
                 <div class="icon"><img src="images/icon04.svg" alt="" /></div>
               </div>
             </div>
@@ -29,11 +27,9 @@
         <div class="item">
           <div class="row">
             <div class="col-md-6">
-              <div class="text">
+              <div class="text lines-wrapper">
                 <h4>Dynamic Real-time Content</h4>
-                <div class="fade-up">
-                  <p>Not only does this provide an exciting new viewing experience for the fans, but the Cavs also benefit by learning more about their audience, gaining valuable app user data.</p>
-                </div>
+                <p>Not only does this provide an exciting new viewing experience for the fans, but the Cavs also benefit by learning more about their audience, gaining valuable app user data.</p>
                 <div class="icon"><img src="images/icon04.svg" alt="" /></div>
               </div>
             </div>
@@ -52,11 +48,9 @@
         <div class="item">
           <div class="row">
             <div class="col-md-6">
-              <div class="text">
+              <div class="text lines-wrapper">
                 <h4>Ensures Feature Development That Drives Engagement</h4>
-                <div class="fade-up">
-                  <p>Helping to provide more tailored content and other offerings to fans in the future.</p>
-                </div>
+                <p>Helping to provide more tailored content and other offerings to fans in the future.</p>
                 <div class="icon"><img src="images/icon04.svg" alt="" /></div>
               </div>
             </div>
