--- a/src/parts/page-header-case-2.html
+++ b/src/parts/page-header-case-2.html
@@ -2,16 +2,19 @@
   <div class="block-inner bg-secondary">
     <div class="media">
       <div class="img-fade">
-        <video src="media/video.mp4" muted autoplay playsinline></video>
+        <video src="media/video.mp4" muted playsinline></video>
       </div>
     </div>
     <div class="text">
       <div class="container-fluid">
-        <h1>
-          <em>ACC</em>
-          UNIVERSITY OF<br />
-          PITTSBURGH
-        </h1>
+        <div class="lines-wrapper">
+          <h1>
+            <em>ACC</em>
+            UNIVERSITY OF<br />
+            PITTSBURGH
+          </h1>
+        </div>
+        <a href="#" class="btn-watch">WATCH NOW</a>
         <div class="video-controls">
           <button class="video-replay"></button>
           <button class="video-play"></button>
