--- a/src/parts/block-headline-text-2.html
+++ b/src/parts/block-headline-text-2.html
@@ -1,14 +1,14 @@
 <section class="block-headline-text-case bg-light">
   <div class="container-fluid">
     <div class="row justify-content-between">
-      <div class="col-lg-4">
+      <div class="col-lg-4 lines-wrapper">
         <h4>
           THE<br />
           SOLUTION
         </h4>
       </div>
       <div class="col-lg-6">
-        <div class="text fade-up-wrapper">
+        <div class="text lines-wrapper">
           <p>The Cleveland Cavaliers were early adopters of AI technology, having utilized WSC Sports’ automated highlights platform for nearly a decade. They recognized the valuable role AI can play and with this technology, they’ve been able to create and distribute real-time video content at a massive speed and scale.</p>
 
           <p>The fact everything is automated means that potentially any type of video highlight can be created at ease. The Cavs leveraged this technology to enable the personalized highlights feed on their app, giving fans the freedom to create their own video content.</p>
