--- a/src/parts/block-home-1.html
+++ b/src/parts/block-home-1.html
@@ -1,4 +1,4 @@
-<section class="block-home block-home-1">
+<section class="block-home block-home-1 bg-secondary">
   <div class="home-parallax">
     <div class="layer layer-1">
       <div id="parallax1" class="parallax-item parallax-item-1"><img src="images/img11.jpg" alt="" /></div>
