--- a/src/parts/block-home-2.html
+++ b/src/parts/block-home-2.html
@@ -1,5 +1,48 @@
 <section class="block-home block-home-2 bg-secondary">
   <div class="block-inner">
-    <video src="media/video.mp4" playsinline muted></video>
+    <!-- <video src="media/video.mp4" playsinline muted></video> -->
+    <div class="wrapper">
+      <div class="text1">
+        <div class="text-line text-line-1">one</div>
+        <div class="text-line text-line-6">infinite</div>
+      </div>
+      <div class="text2">
+        <div class="text-line text-line-2">game</div>
+        <div class="text-line text-line-3">team</div>
+        <div class="text-line text-line-4">player</div>
+        <div class="text-line text-line-5">movement</div>
+      </div>
+      <div class="text3">
+        <div class="text-line text-line-7">stories</div>
+      </div>
+      <div class="video-block">
+        <div class="video-text">
+          <span>laliga</span>
+          <p>R Lewandowski</p>
+          <p>FC Barcelona</p>
+        </div>
+        <div class="video-wrapper">
+          <div class="video">
+            <div class="video-inner">
+              <video src="media/video-home.mp4" playsinline muted></video>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="boxes">
+        <div class="box box1"><img src="images/img11.jpg" alt="" /></div>
+        <div class="box box2"><img src="images/img11.jpg" alt="" /></div>
+        <div class="box box3"><img src="images/img11.jpg" alt="" /></div>
+        <div class="box box4"><img src="images/img11.jpg" alt="" /></div>
+        <div class="box box5"><img src="images/img11.jpg" alt="" /></div>
+        <div class="box box6"><img src="images/img11.jpg" alt="" /></div>
+        <div class="box box7"><img src="images/img11.jpg" alt="" /></div>
+        <div class="box box8"><img src="images/img11.jpg" alt="" /></div>
+        <div class="box box9"><img src="images/img11.jpg" alt="" /></div>
+        <div class="box box10"><img src="images/img11.jpg" alt="" /></div>
+        <div class="box box11"><img src="images/img11.jpg" alt="" /></div>
+      </div>
+    </div>
   </div>
 </section>
