--- a/src/parts/block-home-5.html
+++ b/src/parts/block-home-5.html
@@ -1,4 +1,4 @@
-<section class="block-home block-home-5">
+<section class="block-home block-home-5 bg-secondary">
   <div class="block-inner bg-secondary fade-up-wrapper">
     <div class="container-fluid">
       <div class="slogan">Bringing fans closer <br />to the sports they love.</div>
@@ -6,10 +6,21 @@
       <div class="block-title">Book a live demo</div>
       <div class="d-md-flex justify-content-between align-items-end">
         <a href="#" class="btn btn-primary">
-          book a demo
-          <svg xmlns="http://www.w3.org/2000/svg" width="6" height="6" viewBox="0 0 6 6" fill="none">
-            <path fill-rule="evenodd" clip-rule="evenodd" d="M4.23551 4.96611L0.000473022 0.731074L0.731547 0L4.96658 4.23503V1.09661H6.00047V6H1.09708L1.09708 4.96611H4.23551Z" fill="#0B0B0B" />
-          </svg>
+          <span class="btn-label-wrap">
+            <span class="btn-label" data-text="book a demo">book a demo</span>
+          </span>
+          <span class="btn-arrow">
+            <span class="btn-arrow-inner">
+              <svg xmlns="http://www.w3.org/2000/svg" width="6" height="6" viewBox="0 0 6 6" fill="none">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M4.23503 4.96611L0 0.731074L0.731074 0L4.96611 4.23503V1.09661H6V6H1.09661L1.09661 4.96611H4.23503Z" fill="#0B0B0B" />
+              </svg>
+            </span>
+            <span class="btn-arrow-inner">
+              <svg xmlns="http://www.w3.org/2000/svg" width="6" height="6" viewBox="0 0 6 6" fill="none">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M4.23503 4.96611L0 0.731074L0.731074 0L4.96611 4.23503V1.09661H6V6H1.09661L1.09661 4.96611H4.23503Z" fill="#0B0B0B" />
+              </svg>
+            </span>
+          </span>
         </a>
         <div class="arrow"><img src="images/arrow.svg" alt="" /></div>
       </div>
