--- a/src/parts/block-home-3.html
+++ b/src/parts/block-home-3.html
@@ -1,4 +1,4 @@
-<section class="block-home block-home-3">
+<section class="block-home block-home-3 bg-white">
   <div class="block-inner bg-light">
     <div class="container-fluid">
       <div class="number home-animated-text">468</div>
@@ -42,10 +42,21 @@
       </div>
       <div class="text-center">
         <a href="#" class="btn btn-outline-secondary">
-          OUR CLIENTS
-          <svg xmlns="http://www.w3.org/2000/svg" width="6" height="6" viewBox="0 0 6 6" fill="none">
-            <path fill-rule="evenodd" clip-rule="evenodd" d="M4.23503 4.96611L0 0.731074L0.731074 0L4.96611 4.23503V1.09661H6V6H1.09661L1.09661 4.96611H4.23503Z" fill="#0B0B0B" />
-          </svg>
+          <span class="btn-label-wrap">
+            <span class="btn-label" data-text="OUR CLIENTS">OUR CLIENTS</span>
+          </span>
+          <span class="btn-arrow">
+            <span class="btn-arrow-inner">
+              <svg xmlns="http://www.w3.org/2000/svg" width="6" height="6" viewBox="0 0 6 6" fill="none">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M4.23503 4.96611L0 0.731074L0.731074 0L4.96611 4.23503V1.09661H6V6H1.09661L1.09661 4.96611H4.23503Z" fill="#0B0B0B" />
+              </svg>
+            </span>
+            <span class="btn-arrow-inner">
+              <svg xmlns="http://www.w3.org/2000/svg" width="6" height="6" viewBox="0 0 6 6" fill="none">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M4.23503 4.96611L0 0.731074L0.731074 0L4.96611 4.23503V1.09661H6V6H1.09661L1.09661 4.96611H4.23503Z" fill="#0B0B0B" />
+              </svg>
+            </span>
+          </span>
         </a>
       </div>
     </div>
