--- a/src/index.html
+++ b/src/index.html
@@ -69,6 +69,7 @@
                         </a>
                     </li>
                     <li><a href="thank.html">Thank you page</a></li>
+                    <li><a href="privacy.html">Privacy policy</a></li>
                 </ol>
                 
             </div>
