--- a/src/blog.html
+++ b/src/blog.html
@@ -9,7 +9,7 @@
       //= parts/block-filter.html
       //= parts/block-cards-list.html
     </main>
-
+    //= parts/to-top.html
     //= parts/footer.html
 </div>
 
