--- a/src/parts/block-home-3.html
+++ b/src/parts/block-home-3.html
@@ -5,7 +5,7 @@
 
       <p>WSC Sports is trusted by over 500 leading teams, leagues, broadcasters, and OTT providers worldwide.</p>
 
-      <div class="d-md-none fade-up-wrapper">
+      <div class="d-md-none">
         <div class="logos-list">
           <ul>
             <li><img src="images/logo01-m.svg" alt="" /></li>
@@ -19,7 +19,7 @@
           </ul>
         </div>
       </div>
-      <div class="d-none d-md-block fade-up-wrapper">
+      <div class="d-none d-md-block">
         <div class="logos-list">
           <ul>
             <li><img src="images/logo32.svg" alt="" /></li>
