--- a/src/parts/block-home-4.html
+++ b/src/parts/block-home-4.html
@@ -1,7 +1,7 @@
 <section class="block-home block-home-4 bg-secondary">
   <div class="block-inner bg-secondary">
     <div class="section-horizontal">
-      <div class="slide1 fade-up-wrapper">
+      <div class="slide1">
         <p>Supercharged storytelling told seamlessly to sports fans globally. <br />Wherever, whenever. on whatever device.</p>
         <div class="d-flex position-relative">
           <a href="#" class="btn btn-primary">
@@ -29,7 +29,8 @@
       </div>
 
       <div class="slide2">
-        <div class="card-home fade-up">
+        <div class="card-home">
+          <figure class="card-image"><img src="images/img44.jpg" alt="" /></figure>
           <div class="card-body">
             <div class="card-title">Scale &amp; Speed</div>
             <div class="card-icon"><img src="images/icon05.svg" alt="" /></div>
@@ -43,7 +44,7 @@
       </div>
 
       <div class="slide3">
-        <div class="card-home fade-up">
+        <div class="card-home">
           <figure class="card-image"><img src="images/img44.jpg" alt="" /></figure>
           <div class="card-body">
             <div class="card-title">Personalisation</div>
@@ -58,7 +59,8 @@
       </div>
 
       <div class="slide4">
-        <div class="card-home fade-up">
+        <div class="card-home">
+          <figure class="card-image"><img src="images/img44.jpg" alt="" /></figure>
           <div class="card-body">
             <div class="card-title">trailblazing tech</div>
             <div class="card-icon"><img src="images/icon07.svg" alt="" /></div>
@@ -72,7 +74,8 @@
       </div>
 
       <div class="slide5">
-        <div class="card-home fade-up">
+        <div class="card-home">
+          <figure class="card-image"><img src="images/img44.jpg" alt="" /></figure>
           <div class="card-body">
             <div class="card-title">PRODUCTIVITY</div>
             <div class="card-icon"><img src="images/icon08.svg" alt="" /></div>
