--- a/src/parts/block-home-5.html
+++ b/src/parts/block-home-5.html
@@ -1,5 +1,5 @@
 <section class="block-home block-home-5 bg-secondary">
-  <div class="block-inner bg-secondary fade-up-wrapper">
+  <div class="block-inner bg-secondary">
     <div class="container-fluid">
       <div class="slogan">Bringing fans closer <br />to the sports they love.</div>
       <div class="block-subtitle">CURIOSITY FUELLED?</div>
