--- a/src/parts/block-home-1.html
+++ b/src/parts/block-home-1.html
@@ -1,42 +1,7 @@
 <section class="block-home block-home-1 bg-secondary">
-  <div class="home-parallax">
-    <div class="layer layer-1">
-      <div id="parallax1" class="parallax-item parallax-item-1"><img src="images/img11.jpg" alt="" /></div>
-      <div id="parallax2" class="parallax-item parallax-item-2"><img src="images/img13.jpg" alt="" /></div>
-      <div id="parallax3" class="parallax-item parallax-item-3"><img src="images/img41.jpg" alt="" /></div>
-      <div id="parallax4" class="parallax-item parallax-item-4"><img src="images/img42.jpg" alt="" /></div>
-      <div id="parallax5" class="parallax-item parallax-item-5"><img src="images/img29.jpg" alt="" /></div>
-      <div id="parallax6" class="parallax-item parallax-item-6"><img src="images/img36.jpg" alt="" /></div>
-      <div id="parallax7" class="parallax-item parallax-item-7"><img src="images/img08.jpg" alt="" /></div>
-    </div>
-    <div class="layer layer-2">
-      <div id="parallax1" class="parallax-item parallax-item-1"><img src="images/img11.jpg" alt="" /></div>
-      <div id="parallax2" class="parallax-item parallax-item-2"><img src="images/img13.jpg" alt="" /></div>
-      <div id="parallax3" class="parallax-item parallax-item-3"><img src="images/img41.jpg" alt="" /></div>
-      <div id="parallax4" class="parallax-item parallax-item-4"><img src="images/img42.jpg" alt="" /></div>
-      <div id="parallax5" class="parallax-item parallax-item-5"><img src="images/img29.jpg" alt="" /></div>
-      <div id="parallax6" class="parallax-item parallax-item-6"><img src="images/img36.jpg" alt="" /></div>
-      <div id="parallax7" class="parallax-item parallax-item-7"><img src="images/img08.jpg" alt="" /></div>
-    </div>
-    <div class="layer layer-3">
-      <div id="parallax1" class="parallax-item parallax-item-1"><img src="images/img11.jpg" alt="" /></div>
-      <div id="parallax2" class="parallax-item parallax-item-2"><img src="images/img13.jpg" alt="" /></div>
-      <div id="parallax3" class="parallax-item parallax-item-3"><img src="images/img41.jpg" alt="" /></div>
-      <div id="parallax4" class="parallax-item parallax-item-4"><img src="images/img42.jpg" alt="" /></div>
-      <div id="parallax5" class="parallax-item parallax-item-5"><img src="images/img29.jpg" alt="" /></div>
-      <div id="parallax6" class="parallax-item parallax-item-6"><img src="images/img36.jpg" alt="" /></div>
-      <div id="parallax7" class="parallax-item parallax-item-7"><img src="images/img08.jpg" alt="" /></div>
-    </div>
-    <div class="layer layer-4">
-      <div class="video">
-        <video src="media/video-home.mp4" loop autoplay playsinline muted></video>
-      </div>
-    </div>
-  </div>
   <div class="block-inner">
-    <div id="headline1" class="headline-main">WSC SPORTS</div>
-    <div class="text">
-      <p>The AI-Powered platform that automates sports content creation, management and distribution</p>
+    <div class="video">
+      <video class="part1" src="media/home-part1.mp4" muted playsinline></video>
     </div>
   </div>
 </section>
