--- a/src/parts/banner-article-1.html
+++ b/src/parts/banner-article-1.html
@@ -10,7 +10,7 @@
         <div class="text">
           <div class="lines-wrapper">
             <div class="category">EDITORS PICK</div>
-            <h3>Exploring the Impact of Generative AI in Sports</h3>
+            <h1 class="h3">Exploring the Impact of Generative AI in Sports</h1>
             <p>September 25, 2023</p>
           </div>
           <div class="btn-wrap">
