--- a/src/parts/page-header-careers-single.html
+++ b/src/parts/page-header-careers-single.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="row align-items-center justify-content-between">
       <div class="col-md-6 col-xl-5">
-        <h2>Customer Success Manager</h2>
+        <h1 class="h2">Customer Success Manager</h1>
       </div>
       <div class="col-md-6 col-xl-5 col-xxl-6">
         <div class="fade-up">
