--- a/src/parts/block-cases-slider.html
+++ b/src/parts/block-cases-slider.html
@@ -47,8 +47,18 @@
           </div>
         </div>
       </div>
+      <div class="swiper-slide" style="background-image: url(images/slide2-bg.jpg)">
+        <div class="item">
+          <div class="slide-title">
+            <a href="#">
+              <em>NBA</em>CLEVELAND
+              <br />
+              CAVALIERS
+            </a>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="swiper-pagination"></div>
     <div class="swiper-controls">
       <ul>
         <li data-slide="0">BARCELONA TOUR</li>
@@ -56,6 +66,7 @@
         <li data-slide="2">LA RAMS</li>
         <li data-slide="3">ESPN</li>
         <li data-slide="4">LA LIGA</li>
+        <li data-slide="5">CLEVELAND CAVALIERS</li>
       </ul>
       <div class="active-arrow">
         <svg xmlns="http://www.w3.org/2000/svg" width="15" height="14" viewBox="0 0 15 14" fill="none">
@@ -67,6 +78,9 @@
   <div class="swiper-inner-wrapper">
     <div class="swiper swiper-inner">
       <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <figure><img src="images/slide2.png" alt="" /></figure>
+        </div>
         <div class="swiper-slide">
           <figure><img src="images/slide5.png" alt="" /></figure>
         </div>
@@ -85,4 +99,5 @@
       </div>
     </div>
   </div>
+  <div class="swiper-pagination"></div>
 </section>
