--- a/src/parts/block-home-1.html
+++ b/src/parts/block-home-1.html
@@ -1,7 +1,8 @@
 <section class="block-home block-home-1 bg-secondary">
+  <h1>page title</h1>
   <div class="block-inner">
     <div class="video">
-      <video class="part1" src="media/home-part1.mp4" muted playsinline></video>
+      <video class="part1" data-desktop="https://purple.ams3.cdn.digitaloceanspaces.com/wsc/media/WSCSite_Part1_4k_ForSlowMo_opt.mp4" data-mobile="media/test.mp4" muted playsinline></video>
     </div>
   </div>
 </section>
