--- a/src/parts/block-cards-list.html
+++ b/src/parts/block-cards-list.html
@@ -120,7 +120,8 @@
         <div class="card card-blog">
           <div class="card-header lines-wrapper">
             <div class="category">EDITORS PICK</div>
-            <a href="#" class="title"> SportyBet Joins Forces with Sportradar and WSC Sports to Revolutionize Sports Betting Experience in Brazil </a>
+            <a href="#" class="title"> SportyBet Joins Forces with Sportradar and WSC Sports to Revolutionize Sports
+              Betting Experience in Brazil </a>
           </div>
           <div class="card-img-top">
             <a href="#"><img src="images/img17.jpg" alt="" /></a>
@@ -135,7 +136,9 @@
     <div class="pagination">
       <a href="#" class="page-prev btn btn-secondary">
         <svg xmlns="http://www.w3.org/2000/svg" width="6" height="6" viewBox="0 0 6 6" fill="none">
-          <path fill-rule="evenodd" clip-rule="evenodd" d="M1.76497 4.96611L6 0.731074L5.26893 0L1.03389 4.23503V1.09661H4.76837e-07V6H4.90339L4.90339 4.96611H1.76497Z" fill="#E3E3E7" />
+          <path fill-rule="evenodd" clip-rule="evenodd"
+            d="M1.76497 4.96611L6 0.731074L5.26893 0L1.03389 4.23503V1.09661H4.76837e-07V6H4.90339L4.90339 4.96611H1.76497Z"
+            fill="#E3E3E7" />
         </svg>
         prev
       </a>
@@ -148,8 +151,35 @@
       <a href="#" class="page-next btn btn-secondary">
         next
         <svg xmlns="http://www.w3.org/2000/svg" width="6" height="6" viewBox="0 0 6 6" fill="none">
-          <path fill-rule="evenodd" clip-rule="evenodd" d="M4.23503 4.96611L0 0.731074L0.731074 0L4.96611 4.23503V1.09661H6V6H1.09661L1.09661 4.96611H4.23503Z" fill="#E3E3E7" />
+          <path fill-rule="evenodd" clip-rule="evenodd"
+            d="M4.23503 4.96611L0 0.731074L0.731074 0L4.96611 4.23503V1.09661H6V6H1.09661L1.09661 4.96611H4.23503Z"
+            fill="#E3E3E7" />
         </svg>
+      </a>
+    </div>
+
+
+    <div class="btn-wrapper text-center">
+      <a href="#" class="btn btn-primary btn-sm">
+        <span class="btn-label-wrap">
+          <span class="btn-label" data-text="More posts">More posts</span>
+        </span>
+        <span class="btn-arrow">
+          <span class="btn-arrow-inner">
+            <svg xmlns="http://www.w3.org/2000/svg" width="6" height="6" viewBox="0 0 6 6" fill="none">
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M4.23503 4.96611L0 0.731074L0.731074 0L4.96611 4.23503V1.09661H6V6H1.09661L1.09661 4.96611H4.23503Z"
+                fill="#0B0B0B" />
+            </svg>
+          </span>
+          <span class="btn-arrow-inner">
+            <svg xmlns="http://www.w3.org/2000/svg" width="6" height="6" viewBox="0 0 6 6" fill="none">
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M4.23503 4.96611L0 0.731074L0.731074 0L4.96611 4.23503V1.09661H6V6H1.09661L1.09661 4.96611H4.23503Z"
+                fill="#0B0B0B" />
+            </svg>
+          </span>
+        </span>
       </a>
     </div>
   </div>
