--- a/src/parts/block-case-video.html
+++ b/src/parts/block-case-video.html
@@ -1,3 +1,15 @@
 <section class="block-case-video bg-primary">
-  <video src="media/video1.mp4" playsinline muted></video>
+  <div class="video-wrapper">
+    <video src="media/video1.mp4" playsinline muted></video>
+
+    <div class="overlay">
+      <div class="container-fluid">
+        <div class="video-controls">
+          <button class="video-replay"></button>
+          <button class="video-play"></button>
+          <button class="video-sound"></button>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
