--- a/src/parts/block-outcome.html
+++ b/src/parts/block-outcome.html
@@ -7,7 +7,7 @@
             <div class="col-md-6">
               <div class="text lines-wrapper">
                 <h4>Personalised Content How You Want It</h4>
-                <p>With personalized highlight feeds on the Cavs app, fans now have easy access to the specific content they want to see most.</p>
+                <p>With personalized <b>highlight feeds</b> on the Cavs app, fans now have easy access to the specific content they want to see most.</p>
                 <div class="icon"><img src="images/icon04.svg" alt="" /></div>
               </div>
             </div>
