--- a/src/case-2.html
+++ b/src/case-2.html
@@ -7,9 +7,8 @@
       //= parts/page-header-case-2.html
       //= parts/block-case-intro-2.html
       //= parts/block-case-results-2.html
-
       //= parts/block-headline-text-2.html
-      //= parts/block-case-video.html
+      //= parts/block-case-video1.html
       //= parts/block-cta-2.html
       //= parts/block-outcome.html
       //= parts/block-testimonials-2.html
