--- a/src/parts/block-home-4.html
+++ b/src/parts/block-home-4.html
@@ -2,7 +2,7 @@
   <div class="block-inner bg-secondary">
     <div class="section-horizontal">
       <div class="slide1">
-        <p>Supercharged storytelling told seamlessly to sports fans globally. <br />Wherever, whenever. on whatever device.</p>
+        <p>Supercharged storytelling <br />that drives fan engagement and <br />new revenue opportunities.</p>
         <div class="d-flex position-relative">
           <a href="#" class="btn btn-primary">
             <span class="btn-label-wrap">
@@ -21,68 +21,61 @@
               </span>
             </span>
           </a>
-
-          <div class="video-arrow">
-            <video src="media/arrow.mp4" playsinline muted loop autoplay></video>
-          </div>
         </div>
       </div>
-
-      <div class="slide2">
-        <div class="card-home">
-          <figure class="card-image"><img src="images/img44.jpg" alt="" /></figure>
-          <div class="card-body">
-            <div class="card-title">Scale &amp; Speed</div>
-            <div class="card-icon"><img src="images/icon05.svg" alt="" /></div>
-            <div class="card-footer">
-              <p>We’re using AI from WSC Sports to speed up the creation and distribution of our content</p>
-              <strong>Melcior Soler, Audiovisual Director of LaLiga</strong>
-              <div class="card-logo"><img src="images/laliga.png" alt="" /></div>
+      <div class="d-md-flex">
+        <div class="slide2">
+          <div class="card-home">
+            <div class="card-body">
+              <div class="card-title">SPEED &amp; SCALE</div>
+              <div class="card-icon"><img src="images/icon06.svg" alt="" /></div>
+              <div class="card-footer">
+                <p>“WSC Sports enables us to create unique content for every single digital platform that we touch globally. Now it takes a few minutes to create over 1,000 highlight packages.”</p>
+                <strong>Bob Carney, SVP of Emerging Media, NBA</strong>
+                <div class="card-logo"><img src="images/nba.png" alt="" /></div>
+              </div>
             </div>
           </div>
         </div>
-      </div>
 
-      <div class="slide3">
-        <div class="card-home">
-          <figure class="card-image"><img src="images/img44.jpg" alt="" /></figure>
-          <div class="card-body">
-            <div class="card-title">Personalisation</div>
-            <div class="card-icon"><img src="images/icon06.svg" alt="" /></div>
-            <div class="card-footer">
-              <p>WSC Sports enables us to create unique content for every single digital platform that we touch, globally</p>
-              <strong>Bob Carney, SVP of Emerging Media, NBA</strong>
-              <div class="card-logo"><img src="images/nba.png" alt="" /></div>
+        <div class="slide3">
+          <div class="card-home">
+            <div class="card-body">
+              <div class="card-title">Fan-Focused</div>
+              <div class="card-icon"><img src="images/icon08.svg" alt="" /></div>
+              <div class="card-footer">
+                <p>“We foresee personalization down to the individual level, whether it be highlights of your favorite team, the players on your fantasy, or your preferred content type goals, skills, fans whatever it may be. WSC will play a key part in this puzzle.”</p>
+                <strong>Chris Schlosser, MLS’ Senior VP of Emerging Ventures</strong>
+                <div class="card-logo"><img src="images/espn.png" alt="" /></div>
+              </div>
             </div>
           </div>
         </div>
-      </div>
 
-      <div class="slide4">
-        <div class="card-home">
-          <figure class="card-image"><img src="images/img44.jpg" alt="" /></figure>
-          <div class="card-body">
-            <div class="card-title">trailblazing tech</div>
-            <div class="card-icon"><img src="images/icon07.svg" alt="" /></div>
-            <div class="card-footer">
-              <p>What helps me sleep at night is knowing that WSC is watching the industry as closely as we are</p>
-              <strong>Matt Carstens, ACC Digital Network</strong>
-              <div class="card-logo"><img src="images/acc.png" alt="" /></div>
+        <div class="slide4">
+          <div class="card-home">
+            <div class="card-body">
+              <div class="card-title">Innovation</div>
+              <div class="card-icon"><img src="images/icon07.svg" alt="" /></div>
+              <div class="card-footer">
+                <p>“What helps me sleep at night is knowing that WSC is watching these trends as closely as we are, figuring out what’s next, and helping us to be prepared for it.“</p>
+                <strong>Executive Producer and GM, Matt Carstens, ACCDN</strong>
+                <div class="card-logo"><img src="images/acc.png" alt="" /></div>
+              </div>
             </div>
           </div>
         </div>
-      </div>
 
-      <div class="slide5">
-        <div class="card-home">
-          <figure class="card-image"><img src="images/img44.jpg" alt="" /></figure>
-          <div class="card-body">
-            <div class="card-title">PRODUCTIVITY</div>
-            <div class="card-icon"><img src="images/icon08.svg" alt="" /></div>
-            <div class="card-footer">
-              <p>WSC helps us deploy resources in areas for maximum impact. Instead of having a full team of people cutting the highlights</p>
-              <strong>James Masters, ESPN</strong>
-              <div class="card-logo"><img src="images/espn.png" alt="" /></div>
+        <div class="slide5">
+          <div class="card-home">
+            <div class="card-body">
+              <div class="card-title">IMPACT</div>
+              <div class="card-icon"><img src="images/icon05.svg" alt="" /></div>
+              <div class="card-footer">
+                <p>“The number of sessions per user has increased by more than 70%. We have [also] seen an increase of more than 30% from one year to the next”</p>
+                <strong>Alfredo Bermejo, Digital Strategy Director, LALIGA</strong>
+                <div class="card-logo"><img src="images/laliga.png" alt="" /></div>
+              </div>
             </div>
           </div>
         </div>
