--- a/src/parts/page-header-case-2.html
+++ b/src/parts/page-header-case-2.html
@@ -1,8 +1,9 @@
 <section class="page-header-case video-wrapper">
+  <lottie-player id="scrollToExplore" class="lottie" loop src="json/preloader2.json"></lottie-player>
   <div class="block-inner bg-secondary">
     <div class="media">
       <div class="img-fade">
-        <video class="case-video" data-desktop="media/test.mp4" data-mobile="media/test.mp4" muted playsinline></video>
+        <video class="case-video" data-desktop="media/test.mp4" data-mobile="media/test.mp4" poster="images/temp1.jpg" muted playsinline></video>
       </div>
     </div>
     <div class="text">
