--- a/src/index.html
+++ b/src/index.html
@@ -70,6 +70,7 @@
                     </li>
                     <li><a href="thank.html">Thank you page</a></li>
                     <li><a href="privacy.html">Privacy policy</a></li>
+                    <li><a href="platform.html">Platform</a></li>
                 </ol>
                 
             </div>
