--- a/src/parts/block-cases-slider.html
+++ b/src/parts/block-cases-slider.html
@@ -1,62 +1,61 @@
 <section class="block-cases-slider bg-secondary">
   <div class="swiper swiper-outer">
     <div class="swiper-wrapper">
-      <div class="swiper-slide" style="background-image: url(images/slide1-bg.jpg)">
-        <div class="item">
-          <div class="slide-title">
-            <a href="#">
+      <div class="swiper-slide">
+        <a href="#" style="background-image: url(images/slide1-bg.jpg)">
+          <div class="item">
+            <div class="slide-title">
               <em>ATP</em>BARCELONA<br />
               TOUR
-            </a>
+            </div>
           </div>
-        </div>
+        </a>
       </div>
-      <div class="swiper-slide" style="background-image: url(images/slide2-bg.jpg)">
-        <div class="item">
-          <div class="slide-title">
-            <a href="#">
+      <div class="swiper-slide">
+        <a href="#" style="background-image: url(images/slide2-bg.jpg)">
+          <div class="item">
+            <div class="slide-title">
               <em>NBA</em>CLEVELAND
               <br />
               CAVALIERS
-            </a>
+            </div>
           </div>
-        </div>
+        </a>
       </div>
-      <div class="swiper-slide" style="background-image: url(images/slide3-bg.jpg)">
-        <div class="item">
-          <div class="slide-title">
-            <a href="#">
-              <em>ACC</em>UNIVERSITY OF
-              <br />
-              PITTSBURGH
-            </a>
+      <div class="swiper-slide">
+        <a href="#" style="background-image: url(images/slide3-bg.jpg)">
+          <div class="item">
+            <div class="slide-title">
+              UNIVERSITY OF PITTSBURGH
+              <em>case study</em>
+            </div>
           </div>
-        </div>
+        </a>
       </div>
-      <div class="swiper-slide" style="background-image: url(images/slide4-bg.jpg)">
-        <div class="item">
-          <div class="slide-title">
-            <a href="#"><em>ATP</em>ESPN</a>
+      <div class="swiper-slide">
+        <a href="#" style="background-image: url(images/slide4-bg.jpg)">
+          <div class="item">
+            <div class="slide-title"><em>ATP</em>ESPN</div>
           </div>
-        </div>
+        </a>
       </div>
-      <div class="swiper-slide" style="background-image: url(images/slide5-bg.jpg)">
-        <div class="item">
-          <div class="slide-title">
-            <a href="#"><em>NBA</em>LA LIGA</a>
+      <div class="swiper-slide">
+        <a href="#" style="background-image: url(images/slide5-bg.jpg)">
+          <div class="item">
+            <div class="slide-title"><em>NBA</em>LA LIGA</div>
           </div>
-        </div>
+        </a>
       </div>
-      <div class="swiper-slide" style="background-image: url(images/slide2-bg.jpg)">
-        <div class="item">
-          <div class="slide-title">
-            <a href="#">
+      <div class="swiper-slide">
+        <a href="#" style="background-image: url(images/slide2-bg.jpg)">
+          <div class="item">
+            <div class="slide-title">
               <em>NBA</em>CLEVELAND
               <br />
               CAVALIERS
-            </a>
+            </div>
           </div>
-        </div>
+        </a>
       </div>
     </div>
     <div class="swiper-controls">
@@ -79,22 +78,34 @@
     <div class="swiper swiper-inner">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
-          <figure><img src="images/slide2.png" alt="" /></figure>
+          <figure>
+            <a href="#"><img src="images/slide2.png" alt="" /></a>
+          </figure>
         </div>
         <div class="swiper-slide">
-          <figure><img src="images/slide5.png" alt="" /></figure>
+          <figure>
+            <a href="#"><img src="images/slide5.png" alt="" /></a>
+          </figure>
         </div>
         <div class="swiper-slide">
-          <figure><img src="images/slide4.png" alt="" /></figure>
+          <figure>
+            <a href="#"><img src="images/slide4.png" alt="" /></a>
+          </figure>
         </div>
         <div class="swiper-slide">
-          <figure><img src="images/slide3.png" alt="" /></figure>
+          <figure>
+            <a href="#"><img src="images/slide3.png" alt="" /></a>
+          </figure>
         </div>
         <div class="swiper-slide">
-          <figure><img src="images/slide2.png" alt="" /></figure>
+          <figure>
+            <a href="#"><img src="images/slide2.png" alt="" /></a>
+          </figure>
         </div>
         <div class="swiper-slide">
-          <figure><img src="images/slide1.png" alt="" /></figure>
+          <figure>
+            <a href="#"><img src="images/slide1.png" alt="" /></a>
+          </figure>
         </div>
       </div>
     </div>
